@@ -10,6 +10,10 @@
 	<db-entity name="MEANINGFUL_PK_BIGINT">
 		<db-attribute name="PK" type="INTEGER" isPrimaryKey="true" isMandatory="true"/>
 	</db-entity>
+	<db-entity name="MEANINGFUL_PK_BIGINT_GENERATED">
+		<db-attribute name="PK" type="INTEGER" isPrimaryKey="true" isGenerated="true" isMandatory="true"/>
+		<db-attribute name="TEST_ATTR" type="VARCHAR" length="255"/>
+	</db-entity>
 	<db-entity name="MEANINGFUL_PK_DEP">
 		<db-attribute name="DESCR" type="VARCHAR" length="50"/>
 		<db-attribute name="MASTER_PK" type="INTEGER"/>
@@ -45,6 +49,10 @@
 	</obj-entity>
 	<obj-entity name="MeaningfulPkBigint" className="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkBigint" dbEntityName="MEANINGFUL_PK_BIGINT">
 		<obj-attribute name="pk" type="java.math.BigInteger" db-attribute-path="PK"/>
+	</obj-entity>
+	<obj-entity name="MeaningfulPkBigintGenerated" className="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkBigintGenerated" clientClassName="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkBigintGenerated" dbEntityName="MEANINGFUL_PK_BIGINT_GENERATED">
+		<obj-attribute name="pk" type="java.math.BigInteger" db-attribute-path="PK"/>
+		<obj-attribute name="testAttr" type="java.lang.String" db-attribute-path="TEST_ATTR"/>
 	</obj-entity>
 	<obj-entity name="MeaningfulPkDep2" className="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkDep2" dbEntityName="MEANINGFUL_PK_DEP2">
 		<obj-attribute name="descr" type="java.lang.String" db-attribute-path="DESCR"/>
